# CS510_Rust_Project_Blog

./: Cargo.toml  README.md  index-23e4de19174504bd_bg.wasm  index-9ab9e9245a89eed3_bg.wasm  index.css  index.html  signup-36e36b431a04c9d1.css
src/: main.rs
src/pages/: dashboard.rs  login.rs  mod.rs  recipes.rs  signup.rs
src/routes/: mod.rs
