[package]
name = "yew-app"
version = "0.1.0"
authors = ["Jennie Lee <ljennie@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.17.0"
yew-router = "0.8.1"
wasm-bindgen = "0.2.58"